--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,27 +15,29 @@ jobs:
         # Multiple parallel jobs are needed only to make this faster.
         mypy-platform: ["linux", "win32", "darwin"]
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: "3.11"
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
     - run: |
-        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.9 porcupine
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.10 porcupine
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.11 porcupine
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.12 porcupine
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.13 porcupine
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.14 porcupine
 
   pytest-windows:
     timeout-minutes: 10
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
         cache: pip
@@ -52,10 +54,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
         cache: pip
@@ -69,31 +71,30 @@ jobs:
   # It imports, but gives this error:    RuntimeError: tk.h version (8.6) doesn't match libtk.a version (8.5)
   pytest-macos:
     timeout-minutes: 15
-    # TODO: run tests on M1 macos when we no longer need tree-sitter-builds.
-    # This was never supported by tree-sitter-builds: https://github.com/Akuli/py-tree-sitter-builds/issues/11
-    runs-on: macos-13  # latest intel mac
+    runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
-      PYTHON: /usr/local/opt/python@${{ matrix.python-version }}/libexec/bin/python
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
     - run: brew install python@${{ matrix.python-version }}
     - run: brew install python-tk@${{ matrix.python-version }}
-    - run: $PYTHON --version
-    - run: $PYTHON -m pip install -r requirements-dev.txt
-    - run: $PYTHON scripts/download-tkdnd.py
-    - run: $PYTHON -m pytest --durations=10
+    - run: /opt/homebrew/bin/python${{ matrix.python-version }} --version
+    - run: /opt/homebrew/bin/python${{ matrix.python-version }} -m venv env
+    - run: source env/bin/activate && python --version
+    - run: source env/bin/activate && pip install -r requirements-dev.txt
+    - run: source env/bin/activate && python scripts/download-tkdnd.py
+    - run: source env/bin/activate && python -m pytest --durations=10
 
   flake8-tkinter:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: "3.11"
         cache: pip
@@ -105,10 +106,127 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: "3.11"
         cache: pip
     - run: pip install requests
     - run: python3 scripts/check-markdown-links.py
+
+  pyupgrade:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.11"
+        cache: pip
+    - run: pip install -r requirements-dev.txt
+    - run: |
+        python3 scripts/pyupgrade-all-files.py || (
+          echo -e "\x1b[31mError: You need to run scripts/pyupgrade-all-files.py locally and commit the result.\x1b[0m"
+          exit 1
+        )
+
+  black:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.11"
+    - run: pip install $(grep ^black requirements-dev.txt)
+    - name: Check formatting of porcupine files
+      run: |
+        black --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'black porcupine' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+    - name: Check formatting of tests
+      run: |
+        black --check tests || (
+          echo -e "\x1b[31mError: You need to run 'black tests' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+    - name: Check formatting of scripts
+      run: |
+        black --check scripts || (
+          echo -e "\x1b[31mError: You need to run 'black scripts' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+
+  isort:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.11"
+    - run: pip install $(grep ^isort requirements-dev.txt)
+    - name: Check imports in porcupine files
+      run: |
+        isort --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'isort porcupine' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+    - name: Check imports in tests
+      run: |
+        isort --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'isort tests' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+    - name: Check imports in scripts
+      run: |
+        isort --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'isort scripts' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+
+  pycln:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.11"
+    - run: pip install $(grep ^pycln requirements-dev.txt)
+    - name: Check porcupine files
+      run: |
+        pycln --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'pycln porcupine' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+    - name: Check tests
+      run: |
+        pycln --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'pycln tests' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+    - name: Check scripts
+      run: |
+        pycln --check porcupine || (
+          echo -e "\x1b[31mError: You need to run 'pycln scripts' locally and commit the result.\x1b[0m"
+          exit 1
+        )
+
+  # The requirements-dev.txt file is auto-generated. This job makes sure that
+  # it stays up to date.
+  requirements-dev:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.11"
+    - run: python3 scripts/generate-requirements-dev.py
+    - run: |
+        git diff --exit-code || (
+          echo -e "\x1b[31mError: You need to run scripts/generate-requirements-dev.py locally and commit the result.\x1b[0m"
+          exit 1
+        )
