--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,28 +29,26 @@ dependencies = [
     "Pygments==2.15.0",
     "colorama>=0.2.5",
     "sansio-lsp-client>=0.10.0,<0.11.0",
-    "python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
-    "black>=21.5b2",
-    "isort>=5.10",
+    # TODO: langservers are disabled for now
+    #"python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",  # Do not add this back! Many problems with this. Also known as pyls.
+    "black==26.1.0",  # formatting changes between versions
+    "isort>=7.0.0",
     "dacite>=1.5.1,<2.0.0",
     "tomli==2.0.1",
     "send2trash>=1.8.0,<2.0.0",
     "psutil>=5.8.0,<6.0.0",
     "PyYAML>=6.0,<7",
-    "tree-sitter-builds==2023.3.12",
+    "tree-sitter-language-pack==0.13.0",
     "requests>=2.24.0, <3.0.0",
-    # TODO: upgrade sv-ttk
-    "sv-ttk==2.5.5",
+    "sv-ttk==2.6.1",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest==6.2.5",
-    "pytest-mock==3.10.0",
-    "pycln==2.1.3",
-    "black==23.1.0",
-    "isort==5.12.0",
-    "pyupgrade==3.9.0",
+    "pytest==9.0.2",
+    "pytest-mock==3.15.1",
+    "pycln==2.6.0",
+    "pyupgrade==3.21.2",
     "pillow>=5.4.1",
 
     # type checking, exact versions to avoid "works on my computer" problems
