--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -75,3 +75,21 @@ jobs:
         asset_path: PorcupineSetup_${{ steps.get_version.outputs.version-without-v }}.exe
         asset_name: PorcupineSetup_${{ steps.get_version.outputs.version-without-v }}.exe
         asset_content_type: application/vnd.microsoft.portable-executable
+
+  releasew:
+    runs-on: ubuntu-latest
+    # https://stackoverflow.com/a/58478262
+    #needs: [windows-build, docs, changelog]
+    needs: [windows-build, changelog]
+    if: startsWith(github.ref, 'refs/tags/w')
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: windows-exe
+    - uses: actions/download-artifact@v4
+      with:
+        name: changelog
+    - id: get_version
+      # refs/tags/v2026.02.16 --> 2026.02.16
+      run: echo "version-without-v=$(echo "$GITHUB_REF" | cut -dw -f2)" >> $GITHUB_OUTPUT
+    - run: echo PorcupineSetup_${{ steps.get_version.outputs.version-without-v }}.exe
