--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -58,7 +58,7 @@ jobs:
         name: changelog
     - id: get_version
       # refs/tags/v2026.02.16 --> 2026.02.16
-      run: echo "version-without-v=$(echo "$GITHUB_REF" | cut -dv -f2)" >> $GITHUB_OUTPUT
+      run: echo "version-without-v=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
     - id: create_release
       uses: actions/create-release@v1.1.4
       env:
